--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,25 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>CBR Manager</title>
+    <style type="text/css">
+      html, body, #root {
+          height: 100%;
+      }
+
+      #root {
+          min-height: 100%;
+      }
+
+      body {
+          margin: 0;
+          min-width: 360px;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+              "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          background-color: #273364;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
