--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#273364" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/app_icon_192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/images/app_icon_512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/images/app_icon_192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/images/app_icon_512.png" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>CBR Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript">
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/service-worker.js');
+      }
+    </script>
   </body>
 </html>
